<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Note App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">NoTA</string>
    <string name="nav_header_subtitle">Note Taking App</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Categories</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_add_note">Add Note</string>
    <string name="menu_edit_note">Edit Note</string>
    <string name="menu_archive">Archive</string>

    <string name="content_note">Note</string>
    <string name="text_title">Title</string>
    <string name="text_body" tools:ignore="Typos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean placerat diam sit amet velit sagittis dapibus. Vivamus vel elit quis sem placerat iaculis. Nam velit mauris, ornare non nunc id, rutrum efficitur nulla. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam vel dolor vel purus fermentum commodo vel ut nunc. Phasellus blandit et orci vitae gravida. Nullam a condimentum quam, non elementum ante. Cras porttitor rutrum arcu id tempus. Morbi imperdiet quis lectus non semper. Nulla in tempor nunc. Sed justo leo, molestie sed laoreet at, tincidunt sed nibh. Sed convallis convallis risus ac sodales.</string>
    <string name="text_category">Category</string>
    <string name="text_timestamp" translatable="false">1970 05:34:30</string><!-- TODO Remove this on production  -->
    <string name="hint_title">Title</string>
    <string name="hint_content">Content</string>
    <string name="item_category">Category</string>
    <string name="item_tag">Tag</string>
    <string name="item_archive">Archive</string>
    <string name="item">Trash</string>
    <string name="tab_note">Note</string>
    <string name="tab_tags">Tags</string>
    <string name="add">Add</string>
    <string name="input_tag">Add multiple Tags</string>
    <string name="sample_chip">SampleText</string>
    <string name="edit">Edit</string>
    <string name="insert_tag">Insert a new tag</string>
    <string name="edit_tag_button">Edit Tag Button</string>
    <string name="delete_tag_button">Delete Tag Button</string>
    <string name="edit_tag">Edit Tag</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="tag_editor">Tag Editor</string>
    <string name="export">Export</string>
    <string name="attach_selected">Attach Selected</string>
    <string name="detach_selected">Detach Selected</string>
    <string name="selected_tags">Selected Tags</string>
    <string name="all_tags">All Tags</string>
    <string name="insert_category">Insert Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="text_name">Name</string>
    <string name="btn_remove_category">Remove current category</string>
    <string name="none">None</string>
    <string name="category_selected">Category</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="item_unarchive">Unarchive</string>
    <string name="confirm_delete">Are you sure you want to delete the note?</string>
    <string name="trash_fragment">Deleted Notes</string>
    <string name="confirm_hard_delete">Permanently remove note? This action cannot be undone.</string>
    <string name="folder">Folder: {Title}</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="local_storage_backup">Local Storage Backup</string>
    <string name="str_import">Import</string>
    <string name="creates_a_backup_of_the_current_note_database_n_the_generated_sql_is_saved_in_the_downloads_folder">Creates a Backup of the current note database.\nThe generated \'.sql\' is saved in the Downloads folder.</string>
    <string name="preference_file_key" translatable="false">io.github.dnloop.noteapp.PREF_FILE_KEY</string>
</resources>