<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="item"
            type="io.github.dnloop.noteapp.data.NoteWithCategory" />
        <variable
            name="clickListener"
            type="io.github.dnloop.noteapp.adapter.TrashListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:onClick="@{() -> clickListener.onClick(item)}">

        <ImageButton
            android:id="@+id/btn_hard_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/delete_tag_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_restore"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_delete_forever_black_24dp" />

        <ImageButton
            android:id="@+id/btn_restore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/edit_tag_button"
            android:onClick="@{() -> clickListener.onClick(item)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_hard_delete"
            app:layout_constraintStart_toEndOf="@+id/text_body"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_restore_black_24dp" />

        <TextView
            android:id="@+id/text_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/text_category"
            app:layout_constraintEnd_toStartOf="@+id/btn_restore"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title"
            app:noteContent="@{item.note}"
            tools:text="@string/text_body"/>

        <TextView
            android:id="@+id/text_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ubuntu"
            android:src="@color/secondaryColor"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintBottom_toTopOf="@+id/text_body"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:noteTitle="@{item.note}"
            tools:text="@string/text_title" />

        <TextView
            android:id="@+id/text_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_body"
            app:noteCategory="@{item}"
            tools:text="@string/text_category" />

        <TextView
            android:id="@+id/text_modified_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/text_category"
            app:layout_constraintTop_toTopOf="@+id/text_category"
            app:noteDeletedAt="@{item.note}"
            tools:text="@string/text_timestamp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>